--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,138 +1,1 @@
-
-html, body {
-    background-color: #100E17 !important;
-    color: white !important;
-    overflow-x: hidden;
-}
-
-a, a:hover {
-    color: white !important;
-    text-decoration: none !important;
-}
-
-
-/* Navbar start here */
-
-.navbar {
-    background-color: #201C29;
-    align-content: center;
-    height: 50px;
-    width: 100%;
-    margin: 0px auto;
-    text-align: center;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    z-index: 1;
-}
-
-/* Navbar Endhere! */
-
-/* Big name start */
-
-@media only screen and (max-width: 600px) {
-    .my_name {
-        width: 80% !important;
-    }
-
-    .st0-back {
-        width: 60% !important;
-    }
-
-    .col-small {
-        padding-bottom: 40px;
-        text-align: center;
-    }
-
-    #project_gap {
-        padding-bottom: 90px;
-    }
-
-    #project, #hide_for_sometime {
-        opacity: 0;
-    }
-}
-
-#project, #hide_for_sometime {
-    opacity: 0;
-}
-
-.my_name {
-    padding-top: 90pt;
-    width: 50%;
-}
-
-.col-small {
-    margin:0px auto;
-    text-align: center;
-
-}
-
-.heading_tag {
-    padding: 50px 0 20px 0;
-    color: white; 
-    font-family:'Amatic SC'; 
-    text-align:center;
-    font-size: 40px;
-}
-
-
-/* Skills */
-
-.bar {
-    height: 30px;
-    width: 0px;
-}
-
-#bar_num_py, #bar_num_dj, #bar_num_ht, #bar_num_cs, #bar_num_sc, #bar_num_js, #bar_num_psd, #bar_num_ai {
-    outline: none;
-    border: none;
-    background-color: unset;
-    float: right;
-    color: white;
-    margin-left: 20px ;
-    width: 2pc;
-}
-
-/* EndSkills */
-
-/* contact me */
-
-.form-style {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22); 
-    border-radius: 10px;
-    background:black;
-    margin-top: 10px;
-    padding: 30px 30px 30px 30px;
-    bottom: 40px;
-    width: 100%;
-    margin: 0px auto;
-}
-
-.input-style {
-    margin: 10px auto;
-    width:250px;
-    outline: none;
-    border: none;
-    background: none;
-    color: white;
-    border-bottom: 3px solid blanchedalmond;
-}
-
-.input-style:hover {
-        border-bottom: 3px solid royalblue;
-        transition:1s;
-
-}
-
-
-/* EndContact */
-
-/* footer */
-
-.footer {
-    
-    width: 100%;
-    height: 50px;
-    background-color: #201C29;
-}
-
-/* endfoot */
+body,html{background-color:#100e17!important;color:#fff!important;overflow-x:hidden}a,a:hover{color:#fff!important;text-decoration:none!important}.navbar{background-color:#201c29;align-content:center;height:50px;width:100%;margin:0 auto;text-align:center;box-shadow:0 14px 28px rgba(0,0,0,.25),0 10px 10px rgba(0,0,0,.22);z-index:1}@media only screen and (max-width:600px){.my_name{width:80%!important}.st0-back{width:60%!important}.col-small{padding-bottom:40px;text-align:center}#project_gap{padding-bottom:90px}#hide_for_sometime,#project{opacity:0}}#hide_for_sometime,#project{opacity:0}.my_name{padding-top:90pt;width:50%}.col-small{margin:0 auto;text-align:center}.heading_tag{padding:50px 0 20px 0;color:#fff;font-family:'Amatic SC';text-align:center;font-size:40px}.bar{height:30px;width:0}#bar_num_ai,#bar_num_cs,#bar_num_dj,#bar_num_ht,#bar_num_js,#bar_num_psd,#bar_num_py,#bar_num_sc{outline:0;border:none;background-color:unset;float:right;color:#fff;margin-left:20px;width:2pc}.form-style{box-shadow:0 14px 28px rgba(0,0,0,.25),0 10px 10px rgba(0,0,0,.22);border-radius:10px;background:#000;margin-top:10px;padding:30px 30px 30px 30px;bottom:40px;width:100%;margin:0 auto}.input-style{margin:10px auto;width:250px;outline:0;border:none;background:0 0;color:#fff;border-bottom:3px solid #ffebcd}.input-style:hover{border-bottom:3px solid #4169e1;transition:1s}.footer{width:100%;height:50px;background-color:#201c29}
